infrastructure/k8s/monitoring/alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: monitoring

spec:
  replicas: 1

  selector:
    matchLabels:
      app: alertmanager

  template:
    metadata:
      labels:
        app: alertmanager

    spec:
      containers:
        - name: alertmanager

          image: prom/alertmanager:v0.28.1
          imagePullPolicy: IfNotPresent

          args:
            - "--config.file=/etc/alertmanager/alertmanager.yml"
            - "--storage.path=/alertmanager"

          ports:
            - containerPort: 9093

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "300m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9093
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9093
            initialDelaySeconds: 15
            periodSeconds: 10

          volumeMounts:
            - name: config
              mountPath: /etc/alertmanager

      volumes:
        - name: config
          configMap:
            name: alertmanager-config

---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring

spec:
  selector:
    app: alertmanager

  ports:
    - port: 9093
      targetPort: 9093

  type: ClusterIP
