infrastructure/k8s/monitoring/grafana.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grafana
  namespace: monitoring

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
        - name: grafana

          image: grafana/grafana:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "300m"
              memory: "768Mi"

          livenessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5

          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana

      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc

---
apiVersion: v1
kind: Service

metadata:
  name: grafana
  namespace: monitoring

spec:
  type: ClusterIP

  selector:
    app: grafana

  ports:
    - port: 3000
      targetPort: 3000
