infrastructure/k8s/monitoring/prometheus.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prometheus
  namespace: monitoring

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      containers:
        - name: prometheus

          image: prom/prometheus
          imagePullPolicy: IfNotPresent

          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"

          ports:
            - containerPort: 9090

          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"

            limits:
              cpu: "400m"
              memory: "768Mi"

          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6

          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          volumeMounts:
            - name: config
              mountPath: /etc/prometheus

            - name: prometheus-storage
              mountPath: /prometheus

      volumes:
        - name: config
          configMap:
            name: prometheus-config

        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: prometheus-pvc

---
apiVersion: v1
kind: Service

metadata:
  name: prometheus
  namespace: monitoring

spec:
  type: ClusterIP

  selector:
    app: prometheus

  ports:
    - port: 9090
      targetPort: 9090
