infrastructure/k8s/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prometheus-ingress
  namespace: monitoring

spec:
  ingressClassName: nginx

  rules:
    - host: prometheus.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: prometheus
                port:
                  number: 9090
